# ai_user_research

./: .env.example  .gitignore  AI_User_Research.postman_collection.json  AI_User_Research_API.postman_collection.json  AI_User_Research_Complete.postman_collection.json  CLAUDE.md  DEPLOY.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  RENDER_SETUP_COMPLETE.md  pyproject.toml  render.yaml  requirements.txt  start.sh  stop.sh
docs/: 01-项目需求文档.md  02-技术架构文档.md  03-设计文档.md  04-API示例文档.md  API_ARCHITECTURE.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  utils_usage.md
examples/: audience_generation_example.py  focus_group_batch_example.py  interview_example.py  survey_example.py  test_utils.py
src/: __init__.py  main.py
src/agents/: __init__.py  focus_group_agent.py  generation_agents.py  survey_agent.py
src/core/: __init__.py  config.py  models.py  prompts.py
src/pipelines/: audience_generation_pipeline.py  batch_generation.py
src/routers/: __init__.py  audience_router.py  deps.py  focus_group_router.py  interview_router.py  survey_router.py
src/scenarios/: __init__.py
src/scenarios/focus_group/: __init__.py  batch_manager.py
src/scenarios/interview/: __init__.py  agent.py  models.py
src/tools/: audience_tools.py
src/utils/: __init__.py  concurrency.py  error_handler.py  task_manager.py
src/workflows/: __init__.py  focus_group_workflow.py  survey_deployment.py
