[project]
name = "ai-user-research"
version = "0.1.0"
description = "AI-powered user research platform supporting interviews, surveys, focus groups, and persona generation"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Claude Agent SDK
    "anthropic>=0.40.0",

    # Agno Framework
    "agno>=0.1.0",

    # SmolaAgents
    "smolagents>=0.1.0",

    # Data & Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Async & Concurrency
    "asyncio>=3.4.3",
    "aiohttp>=3.9.0",

    # Configuration
    "python-dotenv>=1.0.0",

    # Web Service
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",

    # Logging & Monitoring
    "loguru>=0.7.0",

    # Utils
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.4.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
